[gd_scene load_steps=16 format=3 uid="uid://8jhkaw13cssx"]

[ext_resource type="Script" uid="uid://eceg15bb0fva" path="res://scripts/toy_box.gd" id="1_jimyk"]
[ext_resource type="Texture2D" uid="uid://dx8uguqkjnlqc" path="res://assets/toybox_spritesheet.png" id="2_4rcyi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jimyk"]
size = Vector2(309, 171)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndipb"]
atlas = ExtResource("2_4rcyi")
region = Rect2(666, 0, 333, 333)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpp6u"]
atlas = ExtResource("2_4rcyi")
region = Rect2(333, 0, 333, 333)

[sub_resource type="AtlasTexture" id="AtlasTexture_vt43c"]
atlas = ExtResource("2_4rcyi")
region = Rect2(0, 0, 333, 333)

[sub_resource type="AtlasTexture" id="AtlasTexture_ol27n"]
atlas = ExtResource("2_4rcyi")
region = Rect2(0, 0, 333, 333)

[sub_resource type="AtlasTexture" id="AtlasTexture_d106n"]
atlas = ExtResource("2_4rcyi")
region = Rect2(666, 0, 333, 333)

[sub_resource type="AtlasTexture" id="AtlasTexture_lukob"]
atlas = ExtResource("2_4rcyi")
region = Rect2(0, 0, 333, 333)

[sub_resource type="AtlasTexture" id="AtlasTexture_82hm4"]
atlas = ExtResource("2_4rcyi")
region = Rect2(333, 0, 333, 333)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugy57"]
atlas = ExtResource("2_4rcyi")
region = Rect2(666, 0, 333, 333)

[sub_resource type="SpriteFrames" id="SpriteFrames_42yu3"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_ndipb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpp6u")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_vt43c")
}],
"loop": false,
"name": &"close",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ol27n")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d106n")
}],
"loop": true,
"name": &"idle_open",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_lukob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82hm4")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_ugy57")
}],
"loop": false,
"name": &"open",
"speed": 8.0
}]

[sub_resource type="Animation" id="Animation_hef0r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_64r3g"]
resource_name = "shake"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.26666668, 0.53333336, 0.8333333),
"transitions": PackedFloat32Array(1, 3.363586, 0.24999996, 0.32987702),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -5), Vector2(0, 1), Vector2(0, -6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.23333333, 0.53333336, 0.8333333),
"transitions": PackedFloat32Array(1, 1, 1, 0.6830202),
"update": 0,
"values": [0.0, 0.017453292, -0.017453292, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_unr5b"]
_data = {
&"RESET": SubResource("Animation_hef0r"),
&"shake": SubResource("Animation_64r3g")
}

[node name="ToyBox" type="Node2D"]
script = ExtResource("1_jimyk")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, 8.5)
shape = SubResource("RectangleShape2D_jimyk")

[node name="ToyboxSprite" type="AnimatedSprite2D" parent="Area2D"]
sprite_frames = SubResource("SpriteFrames_42yu3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_unr5b")
}

[connection signal="body_entered" from="Area2D" to="." method="_on_toybox_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_toybox_area_exited"]
